<resources>
    <string name="app_name">Educational_App</string>

    //BottomNavigationMenu
    <string name="bot_nav_home">Home</string>
    <string name="bot_nav_classes">Classes</string>
    <string name="bot_nav_progress">Progress</string>
    <string name="bot_nav_favorite">Favorites</string>

    //HomeFragment
    <string name="greeting_text">Hi, Mike!</string>
    <string name="classes_hint">History</string>
    <string name="classes_time_hint">8:00–8:45</string>
    <string name="remain_time_hint">2 days left</string>
    <string name="homework_description_hint">Read scenes 1.1–1.12 of The Master and Margarita</string>
    <string name="classes_block_title">Classes</string>
    <string name="homework_block_title">Homework</string>
    <string name="classes_count_hint">6 classes today</string>
    <string name="classes_count">%d classes today</string>
    <string name="remain_time">%d days left</string>
    <string name="classes_teacher">Teacher:</string>
    <string name="classes_teacher_hint">Mrs. Barros</string>

    //ExamCountdown
    <string name="countdown_title">Are you ready for exams?</string>
    <string name="countdown_days">Days</string>
    <string name="countdown_hours">Hours</string>
    <string name="countdown_minutes">Minutes</string>
    <string name="timer_hint">0</string>
    <string name="timer_dots">:</string>
    <string name="skype_button">Open in</string>


</resources>