<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_background">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/app_secondary_color"
        app:cardCornerRadius="@dimen/material_card_corner_radius_35dp"
        app:layout_constraintTop_toBottomOf="@id/outer_circle"
        app:layout_constraintStart_toStartOf="@id/classes_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="@dimen/margin_16dp_medium"
        android:layout_marginEnd="@dimen/margin_20dp_medium"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/margin_26dp_medium"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/class_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/margin_32dp_large"
                app:layout_constraintDimensionRatio="1:1"
                app:cardCornerRadius="@dimen/material_card_corner_radius_35dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardBackgroundColor="@android:color/transparent"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/classes_icon_transparent_background">

                    <ImageView
                        android:id="@+id/user_avatar_image"
                        android:layout_margin="@dimen/margin_10dp_small"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_physic_class"
                        tools:ignore="ContentDescription" />

                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/class_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classes_hint"
                style="@style/ClassesItemTitleStyle"
                app:layout_constraintTop_toTopOf="@id/class_icon"
                app:layout_constraintStart_toEndOf="@id/class_icon"
                android:layout_marginStart="@dimen/margin_16dp_medium"
                />

            <TextView
                android:id="@+id/teacher_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp_medium"
                android:text="@string/classes_teacher"
                style="@style/ClassesItemTimeStyle"
                app:layout_constraintStart_toEndOf="@id/class_icon"
                app:layout_constraintBottom_toBottomOf="@id/class_icon"
                android:layout_marginStart="@dimen/margin_16dp_medium"
                />

            <TextView
                android:id="@+id/teacher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classes_teacher_hint"
                style="@style/ClassesItemTimeStyle"
                app:layout_constraintStart_toEndOf="@id/teacher_title"
                app:layout_constraintBottom_toBottomOf="@id/teacher_title"
                android:layout_marginStart="@dimen/margin_10dp_small"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/classes_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classes_time_hint"
        style="@style/ClassesItemTitleStyle"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/margin_20dp_medium"
        app:layout_constraintStart_toEndOf="@id/inner_circle"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
        />

    <View
        android:id="@+id/outer_circle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/outer_circle_shape"
        android:layout_margin="@dimen/margin_16dp_medium"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
        />

    <View
        android:id="@+id/inner_circle"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/inner_circle_shape"
        app:layout_constraintStart_toStartOf="@id/outer_circle"
        app:layout_constraintTop_toTopOf="@id/outer_circle"
        app:layout_constraintEnd_toEndOf="@id/outer_circle"
        app:layout_constraintBottom_toBottomOf="@id/outer_circle"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="@id/inner_circle"
        app:layout_constraintEnd_toEndOf="@id/inner_circle"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        />

    <View
        android:id="@+id/upper_line"
        android:layout_width="@dimen/margin_2dp_small"
        android:layout_height="0dp"
        android:background="@drawable/background_gradient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inner_circle"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
        />

</androidx.constraintlayout.widget.ConstraintLayout>