<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/homework_item_width"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/app_secondary_color"
    app:cardCornerRadius="35dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="@dimen/margin_16dp_medium"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/margin_16dp_medium"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/class_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="@dimen/margin_40dp_large"
            app:layout_constraintDimensionRatio="1:1"
            app:cardCornerRadius="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/user_avatar_image"
                android:layout_margin="@dimen/margin_10dp_small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_physic_class"
                tools:ignore="ContentDescription" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classes_hint"
            style="@style/ClassesItemTitleStyle"
            app:layout_constraintTop_toTopOf="@id/class_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_36dp_large"
            />

        <TextView
            android:id="@+id/remain_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp_medium"
            android:text="@string/remain_time_hint"
            android:drawablePadding="4dp"
            style="@style/RedColorAttentionTextStyle"
            app:layout_constraintBottom_toBottomOf="@id/class_icon"
            app:layout_constraintStart_toStartOf="@id/class_name"
            app:drawableLeftCompat="@drawable/ic_time"
            app:drawableTint="@color/attention_red_color_text" />

        <TextView
            android:id="@+id/homework_description"
            style="@style/HomeworkDescriptionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp_medium"
            android:text="@string/homework_description_hint"
            app:layout_constraintEnd_toEndOf="@id/class_icon"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/class_name"
            app:layout_constraintTop_toBottomOf="@id/remain_time" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp_medium"
            app:layout_constraintStart_toStartOf="@id/class_name"
            app:layout_constraintEnd_toEndOf="@id/class_icon"
            app:layout_constraintTop_toBottomOf="@id/homework_description"
            android:orientation="horizontal"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/first_additional_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintDimensionRatio="1:1"
                app:cardCornerRadius="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:id="@+id/first_icon"
                    android:layout_margin="@dimen/margin_10dp_small"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_physic_class"
                    tools:ignore="ContentDescription" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/second_additional_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:elevation="10dp"
                android:layout_marginStart="-10dp"
                app:layout_constraintDimensionRatio="1:1"
                app:cardCornerRadius="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:id="@+id/second_icon"
                    android:layout_margin="@dimen/margin_10dp_small"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_physic_class"
                    tools:ignore="ContentDescription" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>